; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_bi_msa.c_hevc_hv_bi_4t_16w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_bi_msa.c_hevc_hv_bi_4t_16w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32)* @hevc_hv_bi_4t_16w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hv_bi_4t_16w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5, i32* %6, i32* %7, i32 %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  store i32* %0, i32** %10, align 8
  store i32 %1, i32* %11, align 4
  store i32* %2, i32** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32* %4, i32** %14, align 8
  store i32 %5, i32* %15, align 4
  store i32* %6, i32** %16, align 8
  store i32* %7, i32** %17, align 8
  store i32 %8, i32* %18, align 4
  %19 = load i32, i32* %18, align 4
  %20 = icmp eq i32 4, %19
  br i1 %20, label %21, label %31

21:                                               ; preds = %9
  %22 = load i32*, i32** %10, align 8
  %23 = load i32, i32* %11, align 4
  %24 = load i32*, i32** %12, align 8
  %25 = load i32, i32* %13, align 4
  %26 = load i32*, i32** %14, align 8
  %27 = load i32, i32* %15, align 4
  %28 = load i32*, i32** %16, align 8
  %29 = load i32*, i32** %17, align 8
  %30 = call i32 @hevc_hv_bi_4t_8multx4_msa(i32* %22, i32 %23, i32* %24, i32 %25, i32* %26, i32 %27, i32* %28, i32* %29, i32 2)
  br label %42

31:                                               ; preds = %9
  %32 = load i32*, i32** %10, align 8
  %33 = load i32, i32* %11, align 4
  %34 = load i32*, i32** %12, align 8
  %35 = load i32, i32* %13, align 4
  %36 = load i32*, i32** %14, align 8
  %37 = load i32, i32* %15, align 4
  %38 = load i32*, i32** %16, align 8
  %39 = load i32*, i32** %17, align 8
  %40 = load i32, i32* %18, align 4
  %41 = call i32 @hevc_hv_bi_4t_8multx4mult_msa(i32* %32, i32 %33, i32* %34, i32 %35, i32* %36, i32 %37, i32* %38, i32* %39, i32 %40, i32 16)
  br label %42

42:                                               ; preds = %31, %21
  ret void
}

declare dso_local i32 @hevc_hv_bi_4t_8multx4_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32) #1

declare dso_local i32 @hevc_hv_bi_4t_8multx4mult_msa(i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
